# athenz-rs

./: .gitignore  .pre-commit-config.yaml  AGENT.md  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  SUPPORT.md  TODO.md
.github/workflows/: ci.yml  release.yml
docs/: README.md  api-coverage.md  architecture.md  authentication.md  clients.md  design-doc-athenz-rust-client-scope-policy.md  examples.md  faq.md  getting-started.md  onboarding.md  operations-handover.md  policy.md  token-validation.md
examples/: issue_access_token.rs  issue_id_token.rs  policy_eval.rs  validate_jwt.rs  validate_ntoken.rs
src/: build_url.rs  client_defaults.rs  error.rs  jwt.rs  lib.rs  models.rs  ntoken.rs  policy.rs  ybase64.rs  zms.rs  zms_async.rs  zts.rs  zts_async.rs
src/jwt/: constants.rs  jwks.rs  mod.rs  types.rs
src/jwt/jwks/: mod.rs  provider.rs  provider_async.rs  sanitize.rs
src/jwt/validator/: async_impl.rs  helpers.rs  mod.rs  select.rs  sync.rs
src/models/: common.rs  mod.rs  policy.rs  zms.rs  zts.rs
src/models/zms/: access.rs  assertion.rs  authority.rs  dependency.rs  group.rs  (+16 more)
src/ntoken/: keys.rs  mod.rs  signer.rs  token.rs
src/policy/: client.rs  mod.rs  store.rs
src/zms/: client.rs  common.rs  mod.rs  options.rs
src/zms_async/: client.rs  mod.rs
src/zts/: client.rs  common.rs  mod.rs  requests.rs
src/zts_async/: client.rs  mod.rs
tests/: async_client.rs  async_validate.rs  async_zms.rs  module_roots.rs
tests/common/: mod.rs
tests/fixtures/: test_rsa_private_key.pem
(+127 files in other folders)
